# drista

./: .dockerignore  .gitignore  AUDIT_CERTIFICATE.md  Cargo.toml  Dockerfile  INFRASTRUCTURE.md  README.md  docker-compose.yml
.github/workflows/: release.yml
bridge/: package.json  qssl-server.js
crates/drista-cli/: Cargo.toml
crates/drista-cli/src/: crypto.rs  main.rs  nostr.rs  pq_dm.rs
crates/qcomm-core/: Cargo.toml  README.md
crates/qcomm-core/examples/: qssh_connect.rs.disabled  quantum_harmony_integration.rs
crates/qcomm-core/src/: error.rs  identity.rs  lib.rs
crates/qcomm-core/src/ai/: agent.rs  handler.rs  mod.rs
crates/qcomm-core/src/crypto/: aead.rs  mod.rs  noise.rs  pq.rs  pq_wasm.rs  qkd.rs  qrng.rs  ratchet.rs  ratchet_wasm.rs  slh_dsa_wasm.rs  stark.rs
crates/qcomm-core/src/node/: client.rs  mod.rs  quantum_harmony.rs  sync.rs  validator.rs
crates/qcomm-core/src/protocol/: channel.rs  handshake.rs  message.rs  mod.rs
crates/qcomm-core/src/transport/: ble.rs  mod.rs  nostr.rs  onchain.rs  qssh.rs
crates/qcomm-core/tests/: qssh_integration.rs
crates/qcomm-ffi/: Cargo.toml  build.rs
crates/qcomm-ffi/src/: lib.rs  qcomm.udl
crates/qcomm-wasm/: Cargo.toml
crates/qcomm-wasm/src/: lib.rs
crates/qcomm-wasm/tests/: pq_crypto_tests.rs
deploy/: DEPLOY.md  downloads.html
deploy/nginx/: nginx-bridge-ws.conf  nginx-notarial-rpc.conf
deploy/qssh-client/: config
deploy/qsshd/: Dockerfile  docker-compose.qssh.yml  qsshd.conf
deploy/scripts/: install.sh  setup-client.sh  setup-validator.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: QSSH_BRIDGE_TRANSPORT.md  QUANTUMHARMONY_VISION.md  REQUIREMENTS.md  SECURITY_MODEL.md  SIGNAL_ALIGNMENT.md
tests/windmill/: README.md  workflow.yaml
tests/windmill/reports/: latest.md  test_report_20260204_082700.md
tests/windmill/scripts/: build-cli.sh  generate-report.sh  test-cli-keygen.sh  test-cli-pq-keygen.sh  test-cli-web-e2e.ts  test-crypto-primitives.ts  test-nip04-roundtrip.sh  test-pqdm-roundtrip.sh  test-web-integration.ts
web/: index.html  package-lock.json  package.json  test-pq-dm.mjs  vite.config.js
web/bridge/: index.js  package-lock.json  package.json
web/public/: browserconfig.xml  manifest.json  sw.js
web/relay/: index.js
web/src/components/: App.jsx  ChannelList.jsx  ChatView.jsx  InfoPanel.jsx  Modal.jsx  store.js
web/src/css/: lcars.css  main.css
web/src/lib/: ipfs.js  nostr.js  pq-crypto.js  pq-dm.js  qssl-transport.js  slh-dsa-identity.js  stark-identity.js  wasm.js
web/tests/: pq-crypto.test.js  pq-dm-extended.test.js  pq-dm.test.js  wasm-node.js
