[package]
name = "drista-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Drista - Post-quantum secure messaging"

[[bin]]
name = "drista"
path = "src/main.rs"

[dependencies]
# Local
qcomm-core = { path = "../qcomm-core", features = ["native-crypto"] }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

# Crypto
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
aes = "0.8"
aes-gcm = { workspace = true }
cbc = { version = "0.1", features = ["alloc"] }
hkdf = { workspace = true }
getrandom = "0.2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rustyline = "14.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
