[package]
name = "qcomm-core"
version = "0.1.0"
edition = "2021"
authors = ["Paraxiom <contact@paraxiom.io>"]
license = "MIT OR Apache-2.0"
description = "Post-quantum cryptographic primitives: ML-KEM-1024, SPHINCS+, Triple Ratchet with forward secrecy"
repository = "https://github.com/Paraxiom/drista"
documentation = "https://docs.rs/qcomm-core"
readme = "README.md"
keywords = ["post-quantum", "cryptography", "ml-kem", "sphincs", "ratchet"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []

# Full native crypto support (ML-KEM, SPHINCS+, networking)
native-crypto = [
    "dep:pqcrypto-traits",
    "dep:pqcrypto-mlkem",
    "dep:pqcrypto-sphincsplus",
    "dep:x25519-dalek",
    "dep:tokio",
    "dep:async-trait",
    "dep:tokio-tungstenite",
    "dep:reqwest",
    "dep:futures-util",
    "dep:whoami",
]

# Bluetooth Low Energy transport
ble = ["dep:btleplug"]

# Hardware QRNG support
qrng = []

# Quantum Key Distribution integration
qkd = []

[dependencies]
# Async runtime (native only)
tokio = { version = "1.43", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Post-quantum cryptography (native only - C bindings)
pqcrypto-traits = { version = "0.3", optional = true }
pqcrypto-mlkem = { version = "0.1", optional = true }
pqcrypto-sphincsplus = { version = "0.7", optional = true }

# Classical crypto
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", optional = true }
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.22"

# Networking (native only)
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }

# BLE (native only)
btleplug = { version = "0.11", optional = true }

# STARK proofs (post-quantum event authentication) - pure Rust, WASM compatible
winterfell = "0.11"
winter-crypto = "0.11"
winter-math = "0.11"
winter-utils = "0.11"

# System info (for username detection)
whoami = { version = "1.6", optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
