[package]
name = "qcomm-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for Quantum Communicator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qcomm-core = { path = "../qcomm-core", default-features = false, features = ["std"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
base64.workspace = true
hex.workspace = true
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
