[package]
name = "quantum-communicator-desktop"
version = "0.1.0"
edition = "2024"
description = "Desktop app for Quantum Communicator"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qcomm-core = { path = "../../crates/qcomm-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
